# proyecto-ia-bigdata

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.md  actualizar_pipeline.ps1  pyproject.toml
.github/workflows/: ci.yml
environment/: requirements-dev.txt  requirements.txt
src/: main.py  streamlit_app.py
src/api/: main.py
src/frontend/: dashboard.py
src/models/: predict.py  train.py
src/pipeline/: clean.py  feature_engineer.ipynb  features.py  ingest.py  reutilizable_functions.py  run_pipeline.py
tests/: test_entorno.py
